# holo

./: .gitignore  dune-project  holo.opam  holo.opam.template  jag.opam
.github/workflows/: dune_runtest.yml
lexer/src/: dune  holo_lexer.ml  jag_lexer.ml  lexer.ml  lexer.mli  regex_dfa.ml  regex_dfa.mli  source_position.ml  source_position.mli  token.ml  token.mli  util.ml  util.mli  with_errors.ml  with_errors.mli
lexer/test/: dune  import.ml  test_lex.ml  test_regex_dfa_gen.ml  test_regex_dfa_iteration.ml  test_regex_dfa_merge.ml  test_regex_mod.ml  test_regex_possible_chars.ml  util.ml  util.mli
parser/src/: ast.ml  ast.mli  dune  expr_parser.ml  expr_parser.mli  holo_parser.ml  import.ml  parser.ml  parser.mli  priority.ml  priority.mli  util.ml  util.mli
parser/test/: dune  import.ml  test_function_and_construction.ml  test_list.ml  test_op.ml  test_operator.ml  test_parse.ml  test_program.ml  test_tuple.ml  util.ml  util.mli
src/: dune  holo_lib.ml  jag_lib.ml
test/: dune  import.ml  jag_test.ml  test_lexer.ml
util/src/: dune  holo_util.ml  left_or_right.mli
